GC 종류와 튜닝 방법 추가